--- a/RedlineApp/RedlineApp/RedlineApp/App.xaml
+++ b/RedlineApp/RedlineApp/RedlineApp/App.xaml
@@ -43,8 +43,8 @@
                 <Setter Property="TextColor" Value="{StaticResource WhiteColor}" />
                 <Setter Property="FontFamily" Value="SourceSansProRegular" />
                 <Setter Property="FontSize" Value="22"/>
+                <Setter Property="FontAttributes" Value="Bold"/>
                 <Setter Property="VerticalOptions" Value="Center"/>
-                <Setter Property="BackgroundColor" Value="{StaticResource GreyColor}"/>
             </Style>
             
             <Style x:Key="CategoryStyle" TargetType="Label">
