Modified icons to fix iOS formatting. Added AlertPage placeholder. Added AlertPage to navbar and reorganized.

--- a/RedlineApp/RedlineApp/RedlineApp/View/MainPage.xaml
+++ b/RedlineApp/RedlineApp/RedlineApp/View/MainPage.xaml
@@ -6,8 +6,9 @@
             BarBackgroundColor="{StaticResource AccentColor}"
             BarTextColor="{StaticResource WhiteColor}"
             SelectedTabColor="{StaticResource LightBlueColor}">
-    <local:ManageAccountPage Title="Account" IconImageSource="settings.png"/>
-    <local:MedicalInformationPage Title="Medical" IconImageSource="medical.png"/>
+    <local:AlertPage Title="Alert" IconImageSource="hospital.png"/>
     <local:MapPage Title="Map" IconImageSource="marker.png"/>
+    <local:MedicalInformationPage Title="Medical" IconImageSource="medical.png"/>
+    <local:ManageAccountPage Title="Account" IconImageSource="settings.png"/>
     <local:LogoutPage Title="Logout" IconImageSource="exit.png"/>
 </TabbedPage>
