--- a/RedlineApp/RedlineApp/RedlineApp/View/AllergyPage.xaml
+++ b/RedlineApp/RedlineApp/RedlineApp/View/AllergyPage.xaml
@@ -67,7 +67,8 @@
                         <Grid Grid.Row="2">
                             <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="*"/>
-                                    <ColumnDefinition Width="3*"/>
+                                    <ColumnDefinition Width="*"/>
+                                    <ColumnDefinition Width="*"/>
                             </Grid.ColumnDefinitions>
 
                             <Button Grid.Column="0"
@@ -78,9 +79,17 @@
 
                             <Button Grid.Column="1"
                                     FontSize="18"
-                                    Text="Next"
+                                    Text="Home"
+                                    x:Name="HomeButton"
+                                    Clicked="HomeButton_Clicked"
+                                    Style="{StaticResource PrimaryButton}"/>
+
+                            <Button Grid.Column="2"
+                                    FontSize="18"
+                                    Text="&gt;"
                                     Clicked="NextButton_Clicked"
                                     Style="{StaticResource PrimaryButton}"/>
+                            
 
                         </Grid>
                     </Grid>
