--- a/RedlineApp/RedlineApp/RedlineApp/View/PreconditionPage.xaml
+++ b/RedlineApp/RedlineApp/RedlineApp/View/PreconditionPage.xaml
@@ -64,7 +64,8 @@
                         <Grid Grid.Row="2">
                             <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="*"/>
-                                    <ColumnDefinition Width="3*"/>
+                                    <ColumnDefinition Width="*"/>
+                                    <ColumnDefinition Width="*"/>
                             </Grid.ColumnDefinitions>
 
                             <Button Grid.Column="0"
@@ -75,7 +76,14 @@
 
                             <Button Grid.Column="1"
                                     FontSize="18"
-                                    Text="Complete"
+                                    Text="Home"
+                                    x:Name="HomeButton"
+                                    Clicked="HomeButton_Clicked"
+                                    Style="{StaticResource PrimaryButton}"/>
+
+                            <Button Grid.Column="2"
+                                    FontSize="18"
+                                    Text="&gt;"
                                     Clicked="CompleteButton_Clicked"
                                     Style="{StaticResource PrimaryButton}"/>
 
