--- a/RedlineApp/RedlineApp/RedlineApp/View/ProfilePage.xaml
+++ b/RedlineApp/RedlineApp/RedlineApp/View/ProfilePage.xaml
@@ -217,7 +217,7 @@
                         <Grid Grid.Row="5">
                             <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="*"/>
-                                    <ColumnDefinition Width="3*"/>
+                                    <ColumnDefinition Width="*"/>
                             </Grid.ColumnDefinitions>
 
                             <Button Grid.Column="0"
@@ -228,7 +228,7 @@
 
                             <Button Grid.Column="1"
                                     FontSize="18"
-                                    Text="Next"
+                                    Text="submit &#38; next"
                                     Clicked="NextButton_Clicked"
                                     Style="{StaticResource PrimaryButton}"/>
 
