comments on cs file

--- a/RedlineApp/RedlineApp/RedlineApp/View/AllergyDetailPage.xaml
+++ b/RedlineApp/RedlineApp/RedlineApp/View/AllergyDetailPage.xaml
@@ -3,6 +3,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="RedlineApp.View.AllergyDetailPage">
     <StackLayout>
+
+        <!--Update and Delete Buttons for Allergy List-->
+
         <Entry x:Name="allergyEntry"/>
         <Button Text="Update"
                 x:Name="updateButton"
