Finished cleaning up.

--- a/RedlineApp/RedlineApp/RedlineApp/View/MapPage.xaml
+++ b/RedlineApp/RedlineApp/RedlineApp/View/MapPage.xaml
@@ -13,16 +13,23 @@
                    Margin="0, 0, 0, -10"
                    VerticalOptions="FillAndExpand"
                    BackgroundColor="{StaticResource BackgroundColor}">
-
                 <StackLayout>
-                <!-- Google map display. -->
-                <maps:Map x:Name="MapDisplay" MapType="Street" IsShowingUser="True"/>
+                    <!-- Spinning activity indicator. -->
+                    <ActivityIndicator x:Name="ActivityIndicatorStatus" 
+                                                WidthRequest="50" 
+                                                HeightRequest="50" 
+                                                IsRunning="True" 
+                                                IsVisible="False" 
+                                                Color="{StaticResource AccentColor}"/>
                     
-                    <!-- Refresh button. -->
-                <Button x:Name="RefreshLocationBtn" 
-                        Text="Refresh Location"
-                        Style="{StaticResource PrimaryButton}"
-                        Clicked="RefreshLocationBtnClicked"/>
+                        <!-- Google map display. -->
+                    <maps:Map x:Name="MapDisplay" MapType="Street" IsShowingUser="True"/>
+                    
+                        <!-- Refresh button. -->
+                    <Button x:Name="RefreshLocationBtn" 
+                            Text="Refresh Location"
+                            Style="{StaticResource PrimaryButton}"
+                            Clicked="RefreshLocationBtnClicked"/>
                 </StackLayout>
             </Frame>
         </StackLayout>
