--- a/RedlineApp/RedlineApp/RedlineApp/View/ContactPage.xaml
+++ b/RedlineApp/RedlineApp/RedlineApp/View/ContactPage.xaml
@@ -126,7 +126,8 @@
 
                         </Grid>
                         <!-- Action Buttons. -->
-                        <Grid Grid.Row="4">
+                        <Grid Grid.Row="4"
+                              x:Name="ButtonGrid">
                             <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="*"/>
                                     <ColumnDefinition Width="*"/>
@@ -134,6 +135,7 @@
 
                             <Button Grid.Column="0"
                                     Text="Home"
+                                    x:Name="HomeButton"
                                     FontSize="18"
                                     Clicked="SkipButton_Clicked"
                                     Style="{StaticResource PrimaryButton}"/>
@@ -141,6 +143,7 @@
                             <Button Grid.Column="1"
                                     Text="update &#38; next"
                                     FontSize="18"
+                                    x:Name="updateNext"
                                     Clicked="NextButton_Clicked"
                                     Style="{StaticResource PrimaryButton}"/>
 
