--- a/RedlineApp/RedlineApp/RedlineApp/View/PreconditionPage.xaml
+++ b/RedlineApp/RedlineApp/RedlineApp/View/PreconditionPage.xaml
@@ -61,7 +61,8 @@
                             </ListView>
                         </Grid>
                         <!-- Action Buttons. -->
-                        <Grid Grid.Row="2">
+                        <Grid Grid.Row="2"
+                              x:Name="ButtonGrid">
                             <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="*"/>
                                     <ColumnDefinition Width="*"/>
