--- a/RedlineApp/RedlineApp/RedlineApp/View/ProfilePage.xaml
+++ b/RedlineApp/RedlineApp/RedlineApp/View/ProfilePage.xaml
@@ -229,11 +229,13 @@
                             <Button Grid.Column="0"
                                     FontSize="20"
                                     Text="&lt;"
+                                    x:Name="backHome"
                                     Clicked="BackButton_Clicked"
                                     Style="{StaticResource PrimaryButton}"/>
 
                             <Button Grid.Column="1"
                                     FontSize="18"
+                                    x:Name="updateNext"
                                     Text="update &#38; next"
                                     Clicked="NextButton_Clicked"
                                     Style="{StaticResource PrimaryButton}"/>
